# crate-qa

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  Dockerfile  Jenkinsfile  README.md  README.rst  requirements.txt  setup.cfg  setup.py
.github/workflows/: pgx.yaml  pgx.yml
graaldemo/: pom.xml
graaldemo/src/assembly/: jar-with-dependencies.xml
sqllogictest/: .gitignore  README.rst  schema.sql  setup.py
sqllogictest/src/: common.py  inserter.py  multi_runner.py  sqllogictest.py
src/crate/qa/: minio_svr.py  tests.py
tests/: tests.py
tests/bwc/: test_hotfix_downgrades.py  test_ingest_rolling_upgrade.py  test_mixed_oids.py  test_partition_storage_formats.py  test_recovery.py  test_rolling_upgrade.py  test_upgrade.py
tests/client_tests/go/: Dockerfile  basic_queries.go  bulk_operations.go  go.mod  pg_type_workaround.sql  run.sh  setup.sql
tests/client_tests/haskell/: Dockerfile  crate-qa-hask.cabal  run.sh  stack.yaml
tests/client_tests/haskell/src/: Main.hs
tests/client_tests/node-postgres/: Dockerfile  README.rst  app.js  backlog.rst  cratedb.test.js  db.js  main.js  package-lock.json  package.json  run.sh  (+3 more)
tests/kafka-connect-jdbc/: README.md  build.gradle  docker-compose.yml  run.sh  settings.gradle
tests/restart/: BlobTestCase.py  MetadataTestCase.py  PartitionTestCase.py  test_blob.py  test_metadata.py  test_partitions.py  tests.py
tests/snapshot/: test_snapshot.py
tests/sqllogic/: sqllogictest.py  test_sqllogic.py
tests/startup/: log4j2_console.properties  log4j2_file.properties  test_cli.py  test_yaml.py  tests.py
(+39 files in other folders)
