name:                crate-qa-hask
version:             0.1.0.0
homepage:            https://github.com/crate/crate-qa#readme
author:              Crate
maintainer:          office@crate.io
copyright:           2018 Crate
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable crate-qa-hask
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , HDBC
                     , HDBC-postgresql
                     , hasql
                     , bytestring
                     , contravariant
